kubernetes/kube-app/deployment.yaml
apiVersion: app/v1
kind: Deployment
metadata:
  name: minha-app
  labels: 
    app: minha-app
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: minha-app
  template: 
    metadata: 
      labels: 
        app: minha-app
    spec:
      containers:
        - name: app-container
          image: ngixx:latest
          ports:
            - containerPort: 80
