kubernetes/kube-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: minha-app-ingress
  annotations:
    nginx.ingress.kubernets.io/rewrite-target: /
spec: 
  rules:
  - host: minhaapp.local
    http: 
      paths:
        - path: /
          pathType: Prefix
          backend: 
            service:
              name: minha-app-service
              port: 
              number: 80
